--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,8 @@
-name: 'Bump Version'
+name: 'Bump Versions'
 description: 'A GitHub Action to easily bump version files'
 author: 'Tommaso De Rossi'
+icon: chevrons-up
+color: red
 inputs: 
   version_file:
     description: 'Version file to bump path'
