--- a/package.json
+++ b/package.json
@@ -22,14 +22,10 @@
   "dependencies": {
     "@actions/core": "^1.0.0",
     "@actions/github": "^1.1.0",
-    "@types/glob": "^7.1.1",
-    "@types/lodash.groupby": "^4.6.6",
-    "glob": "^7.1.4",
-    "globby": "^10.0.1",
-    "lodash.groupby": "^4.6.0",
-    "simple-git": "^1.126.0"
+    "globby": "^10.0.1"
   },
   "devDependencies": {
+    "@types/lodash.groupby": "^4.6.6",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.4",
     "jest": "^24.8.0",
