--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.0.0",
+    "@actions/exec": "^1.0.1",
     "@actions/github": "^1.1.0",
     "globby": "^10.0.1"
   },
