--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,11 @@ inputs:
   prefix:
     description: 'how to prefix the tag'
     default: ''
+outputs:
+  version:
+    description: New version
+  prefix:
+    description: Prefix if set
 runs:
   using: 'node12'
   main: 'lib/main.js'
