--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -21,6 +21,7 @@ jobs:
                   version_file: VERSION
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  BRANCH: js
             - run: npm publish
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
