--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,7 +14,7 @@ jobs:
               with:
                   node-version: 12
                   registry-url: https://registry.npmjs.org/
-            - run: npm ci
+            # - run: npm ci
             - name: Bump version
               uses: remorses/bump-version@js
               with:
