--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@actions/core": "^1.0.0",
     "@actions/exec": "^1.0.1",
     "@actions/github": "^1.1.0",
-    "globby": "^10.0.1"
+    "globby": "^10.0.1",
+    "retry": "^0.12.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
