--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bumpversions",
   "_": "[bump]",
-  "version": "2.0.35-alpha.1-alpha.0",
+  "version": "2.0.37",
   "description": "JavaScript template action",
   "main": "lib/main.js",
   "files": [
