--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -17,7 +17,7 @@ jobs:
                   registry-url: https://registry.npmjs.org/
             # - run: npm ci
             - name: Bump version
-              uses: ./
+              uses: remorses/bump-version@js
               with:
                   version_file: VERSION
                   prerelease_tag: alpha
