--- a/action.yml
+++ b/action.yml
@@ -1,38 +1,40 @@
-name: 'Bump Versions'
-description: 'A GitHub Action to easily bump version files'
-author: 'Tommaso De Rossi'
+name: "Bump Versions"
+description: "A GitHub Action to easily bump version files"
+author: "Tommaso De Rossi"
 branding:
-  icon: 'chevrons-up'
-  color: 'red'
-inputs: 
+  icon: "chevrons-up"
+  color: "red"
+inputs:
   version_file:
-    description: 'Version file to bump path'
-    default: 'VERSION'
+    description: "Version file to bump path"
+    default: "VERSION"
     required: false
   prefix:
-    description: 'how to prefix the tag'
-    default: ''
+    description: "how to prefix the tag"
+    default: ""
     required: false
   github_token:
-    description: 'the github token to push changes'
+    description: "the github token to push changes"
     required: false
   prerelease_tag:
-    description: 'The prerelease tag, for example alpha will give you the version `0.0.1-alpha.0`'
+    description: "The prerelease tag, for example alpha will give you the version `0.0.1-alpha.0`"
     required: false
   branch:
-    description: 'The branch to bump version in'
+    description: "The branch to bump version in"
     required: false
-    default: ''
+    default: ""
+  ignore:
+    description: "Filenames to ignore, separated by commas"
+    required: false
+    default: ""
 outputs:
   version:
     description: New version
   prefix:
     description: Prefix if set
 runs:
-  using: 'node12'
-  main: 'lib/main.js'
-
+  using: "node12"
+  main: "lib/main.js"
 # [bump]
 # 2.0.39 // TODO regex match the rag
-
 
