Test explicit param

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -5,6 +5,7 @@ on:
         branches:
             - js
             - preprelease
+            - explicit-option
 
 jobs:
     build:
@@ -20,6 +21,7 @@ jobs:
               uses: ./
               with:
                   version_file: VERSION
+                  explicit: 1
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             # - run: npm publish
