--- a/package.json
+++ b/package.json
@@ -1,44 +1,43 @@
 {
-  "name": "bumpversions",
-  "_": "[bump]",
-  "version": "2.0.53",
-  "description": "JavaScript template action",
-  "main": "lib/main.js",
-  "files": [
-    "lib",
-    "bin.js"
-  ],
-  "bin": "./bin.js",
-  "scripts": {
-    "build": "tsc",
-    "test": "mocha -r sucrase/register tests/**"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/actions/javascript-template.git"
-  },
-  "keywords": [
-    "actions",
-    "node",
-    "setup"
-  ],
-  "author": "YourNameOrOrganization",
-  "license": "MIT",
-  "dependencies": {
-    "@actions/core": "^1.0.0",
-    "@actions/exec": "^1.0.1",
-    "@actions/github": "^1.1.0",
-    "@types/semver": "^7.3.1",
-    "retry": "^0.12.0",
-    "semver": "^7.3.2",
-    "smart-glob": "0.0.5"
-  },
-  "devDependencies": {
-    "@types/lodash.groupby": "^4.6.6",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^12.0.4",
-    "mocha": "^8.0.1",
-    "sucrase": "^3.15.0",
-    "typescript": "^3.5.1"
-  }
+    "name": "bumpversions",
+    "_": "[bump]",
+    "version": "2.0.53",
+    "description": "JavaScript template action",
+    "main": "lib/main.js",
+    "files": [
+        "lib",
+        "bin.js"
+    ],
+    "bin": "./bin.js",
+    "scripts": {
+        "build": "tsc",
+        "test": "mocha -r sucrase/register tests/**"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/actions/javascript-template.git"
+    },
+    "keywords": [
+        "actions",
+        "node",
+        "setup"
+    ],
+    "author": "YourNameOrOrganization",
+    "license": "MIT",
+    "dependencies": {
+        "@actions/core": "^1.0.0",
+        "@actions/exec": "^1.0.1",
+        "@actions/github": "^1.1.0",
+        "@types/semver": "^7.3.1",
+        "retry": "^0.12.0",
+        "semver": "^7.3.2",
+        "smart-glob": "0.0.5"
+    },
+    "devDependencies": {
+        "@types/lodash.groupby": "^4.6.6",
+        "@types/mocha": "^7.0.2",
+        "@types/node": "^12.0.4",
+        "mocha": "^8.0.1",
+        "sucrase": "^3.15.0"
+    }
 }
